# routes/api.php
@@ -4,9 +4,11 @@ Route::group(['prefix' => 'v1'], function() {
 
     Route::post('/login', 'Api\v1\AuthController@login')->name('api.v1.login');
 
-    Route::post('/logout', 'Api\v1\AuthController@logout')->name('api.v1.logout');
+    Route::group(['middleware' => ['jwt.auth']], function() {
+        Route::post('/logout', 'Api\v1\AuthController@logout')->name('api.v1.logout');
 
-    Route::get('users', 'Api\v1\UserController@index')->name('api.v1.users.index');
+        Route::get('users', 'Api\v1\UserController@index')->name('api.v1.users.index');
 
-    Route::post('users', 'Api\v1\UserController@store')->name('api.v1.users.store');
+        Route::post('users', 'Api\v1\UserController@store')->name('api.v1.users.store');
+    });
 });
